patterns/kafka-to-object-storage/deployment/3_secor_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: secor
  name: kafka-to-object-storage-secor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secor
  strategy: {}
  template:
    metadata:
      labels:
        app: secor
    spec:
      containers:
        - image: quay.io/rh-data-services/secor:0.29-hdp2.9.2_latest
          name: secor-0-29-hadoop-2-9-2
          imagePullPolicy: Always
          volumeMounts:
            - name: "local-mount"
              mountPath: "/mnt/secor_data/message_logs/partition"
      volumes:
        - name: local-mount
          emptyDir: {}
